src/test/ui/generic-associated-types/generic-associated-types-where.stderr
error[E0276]: impl has stricter requirements than trait
  --> $DIR/generic-associated-types-where.rs:24:5
   |
LL |     type Assoc3<T>;
   |     --------------- definition of `Assoc3` from trait
...
LL |     type Assoc3<T> = Vec<T> where T: Iterator;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ impl has extra requirement `T: Iterator`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0276`.
